@@ -106,6 +106,8 @@
       so that the LOB is read() automatically, if no typemap was present
       (i.e., if a textual execute() was issued).
     - mod operator '%' produces MOD [ticket:624]
+    - converts cx_oracle datetime objects to Python datetime.datetime when
+      Python 2.3 used [ticket:542]
 - postgres
     - fixed escaping of the modulo operator [ticket:624]
     - added support for reflection of domains [ticket:570]
